add user logics

--- a/Presentation/API/Box.API.csproj
+++ b/Presentation/API/Box.API.csproj
@@ -30,5 +30,11 @@
     <ProjectReference Include="..\..\Library\Application\Box.Contract\Box.Contract.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\..\Library\Domain\Box.Domain\Box.Domain.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Library\Infrastructure\Box.Infrastructure\Box.Infrastructure.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
