--- a/Presentation/API/appsettings.json
+++ b/Presentation/API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "AppSettings": {
-    "Token": "my top secret key"
+    "SecureKey": "$2a$11$Myb9CO5LpzrfWN8tyKhvCOIUioiy7KqfuzykzondJsjimNmuoH1zi$2a$11$Myb9CO5LpzrfWN8tyKhvCOIUioiy7KqfuzykzondJsjimNmuoH1zi"
   },
   "AppVersion": "1.0.0",
   "Logging": {
