--- a/Presentation/API/Box.API.csproj
+++ b/Presentation/API/Box.API.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Middleware\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Library\Application\Box.Contract\Box.Contract.csproj">
@@ -41,5 +42,8 @@
     <ProjectReference Include="..\..\Library\Application\Box.Application\Box.Application.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\" />
   </ItemGroup>
 </Project>
