--- a/Presentation/API/Box.API.csproj
+++ b/Presentation/API/Box.API.csproj
@@ -29,16 +29,16 @@
     <Folder Include="Middleware\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Library\Application\Box.Application\Box.Application.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
     <ProjectReference Include="..\..\Library\Application\Box.Contract\Box.Contract.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\..\Library\Core\Box.Data\Box.Data.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
     <ProjectReference Include="..\..\Library\Domain\Box.Domain\Box.Domain.csproj">
-      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Library\Infrastructure\Box.Infrastructure\Box.Infrastructure.csproj">
-      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Library\Application\Box.Application\Box.Application.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
