--- a/Presentation/ClientApp/package.json
+++ b/Presentation/ClientApp/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --host 0.0.0.0 --port 3000",
     "start": "yarn dev",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
