--- a/Presentation/ClientApp/docker-compose.prod.yaml
+++ b/Presentation/ClientApp/docker-compose.prod.yaml
@@ -1,4 +1,4 @@
-version: "1.0"
+version: '3.3'
 
 services:
   app:
@@ -6,6 +6,5 @@ services:
     image: box-prod
     build:
       context: .
-      target: production
     ports:
       - 3000:80
